2006-10-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: manage both lists of
	objects wrt to the toolbar actions.

	* UI/WebServerResources/generic.js: added code to the "String"
	class to decode number-encoded char entities.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-batchDeleteAction]): new method to delete selected entries in the
	lists.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -deleteEntriesWithIds:ids]): new method
	that delete identified entries in batch.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-jsCloseWithRefreshMethod:methodName]): new method with explicit purpose.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -saveAction]),
	UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveAction]), UI/MailerUI/UIxMailEditor.m ([UIxMailEditor
	-sendAction]), UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-saveAction]):
	return a UIxJSClose component if everything went fine.

	* UI/Scheduler/UIxTaskEditor.h: interface extracted from
	UIxTaskEditor.m.

	* UI/Scheduler/UIxAppointmentEditor.h: interface extracted from
	UIxAppointmentEditor.m.

	* UI/Common/UIxJSClose.[hm]: new UIxComponent designed to display
	a very light page with javascript code to close a window, by
	calling a method on the opener if specified. This component is
	designed to work as a response to form postings.

2006-10-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoTaskObject.[hm]: clone of
	SOGoAppointmentObject adapted for the handling of tasks.

	* SoObjects/Appointments/NSArray+Appointments.[hm]: category
	extracted from SOGoAppointmentObject.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveUrl]): returns the url needed to POST the new form to.
	redirect the user to <aptid>/editAsAppointment instead of /edit,
	so that SOGoAppointmentFolder can return the correct object type.

	* SoObjects/SOGo/NSObject+AptComparison.m ([NSObject